<resources>
    <string name="app_name">TestAutomationApp</string>

    <string name="user_name_title">NAME</string>
    <string name="user_email_title">EMAIL ADDRESS</string>
    <string name="user_phone_number">PHONE NUMBER</string>
    <string name="none">None</string>
    <string name="user_birth_date">BIRTH DATE</string>
    <string name="user_address">ADDRESS</string>
    <string name="user_city">CITY</string>
    <string name="user_country">COUNTRY</string>

    <string name="sort_by_product_type">Sort by product type</string>
    <string name="sort_by_device_name">Sort by device name</string>
    <string name="only_light">Only Lights</string>
    <string name="only_heaters">Only Heaters</string>
    <string name="only_roller_shutter">Only Roller Shutter</string>
    <string name="check_if_fields_empty">Fields should not be empty</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="postal_code_is_not_valid">Postal Code is not valid</string>
    <string name="intensity_device">Intensity : </string>
    <string name="temperature_device">"Temperature : "</string>
    <string name="alert_dialog_title_back">You gonna loose your changes !</string>
    <string name="alert_dialog_title_save">You gonna save your changes !</string>
    <string name="alert_dialog_message">Are you sure ?</string>
    <string name="alert_dialog_positive_button">Yes</string>
    <string name="alert_dialog_negative_button">Cancel</string>
    <string name="mode_on_off">Mode On/Off</string>
    <string name="delete_mode">Delete mode</string>
    <string name="delete_device_title">Delete device</string>
    <string name="edit_devices_no_changes">You didn\'t edit your device, you can\'t save</string>
</resources>