<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/sort"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sort_by_product_type"
            android:icon="@drawable/ic_sort"
            android:title="@string/sort_by_product_type" />
        <item
            android:id="@+id/sort_by_device_name"
            android:icon="@drawable/ic_sort"
            android:title="@string/sort_by_device_name" />
        <item
            android:id="@+id/only_light"
            android:title="@string/only_light" />
        <item
            android:id="@+id/only_heater"
            android:title="@string/only_heaters" />
        <item
            android:id="@+id/only_roller_shutter"
            android:title="@string/only_roller_shutter" />
    </group>
</menu>