<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".ui.fragments.EditUserDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/save_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_save" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/user_image"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@+id/user_image"
                app:layout_constraintStart_toStartOf="@+id/user_image"
                app:layout_constraintTop_toBottomOf="@+id/user_image"
                tools:text="@string/app_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/user_name_title"
                android:textColor="@color/grey"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/user_name_title"
                app:layout_constraintTop_toBottomOf="@+id/user_name_title"
                tools:text="Eleanor Pena" />

            <View
                android:id="@+id/view"
                android:layout_width="0.5dp"
                android:layout_height="0.5dp"
                app:layout_constraintBottom_toBottomOf="@+id/user_name_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_name_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_last_name_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/user_name_title"
                tools:text="Eleanor Pena" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:text="@string/user_email_title"
                android:textColor="@color/grey"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name_value" />

            <RelativeLayout
                android:id="@+id/user_email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_email_title"
                app:layout_constraintTop_toBottomOf="@+id/user_email_title">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_email_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/transparent"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="25dp"
                    android:text="@string/none"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="elenpe@gmail.com" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/login_email_validation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="35dp"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_check_email" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_phone_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:text="@string/user_phone_number"
                android:textColor="@color/grey"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_email_layout" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_phone_number_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:inputType="number"
                android:text="@string/none"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_phone_number_title"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_number_title"
                tools:text="(209) 555-0104" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_birth_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:text="@string/user_birth_date"
                android:textColor="@color/grey"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_number_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_birth_date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:inputType="number"
                android:text="@string/none"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_birth_date_title"
                app:layout_constraintTop_toBottomOf="@+id/user_birth_date_title"
                tools:text="813766371000" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:text="@string/user_address"
                android:textColor="@color/grey"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_birth_date_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_address_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:text="@string/none"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_address_title"
                app:layout_constraintTop_toBottomOf="@+id/user_address_title"
                tools:text="2B rue Michelet" />

            <View
                android:id="@+id/view2"
                android:layout_width="0.5dp"
                android:layout_height="0.5dp"
                android:layout_marginStart="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/user_address_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/user_address_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_postal_code_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:inputType="number"
                android:maxLength="5"
                android:text="@string/none"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/user_address_title"
                tools:text="92130" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_city_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:text="@string/user_city"
                android:textColor="@color/grey"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_address_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_city_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:text="@string/none"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_city_title"
                app:layout_constraintTop_toBottomOf="@+id/user_city_title"
                tools:text="Issy-les-Moulineaux" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:text="@string/user_country"
                android:textColor="@color/grey"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_city_value" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_country_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/user_country_title"
                app:layout_constraintTop_toBottomOf="@+id/user_country_title"
                tools:text="France" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="0.5dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_country_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>